--- a/imageGallery/index.html
+++ b/imageGallery/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="styles.css">
-    <title>Hello, world!</title>
+    <title>Flexbox Image Gallery</title>
 	<style>
 		.wrapper h1 {
 			text-align: center;
