--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
        <!--End of About section -->
        <!--Start of Boostrap work -->
-        <section id="projects" style="background-color:white;">
+        <section id="projects">
             <h2 class="projects-section-header" style="color:white;">
                 Bootstrap examples
             </h2>
