--- a/backups/9_17_2020/index.html
+++ b/backups/9_17_2020/index.html
@@ -16,7 +16,7 @@
         <!--<a class="navbar-brand">Nav Menu</a> -->
           <!-- Collapse button -->
         <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarContent"
-          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <div class="animated-icon1" >
             <span></span>
             <span></span>
@@ -59,12 +59,24 @@
           <br>
           <!--Typerwriter start https://codepen.io/hi-im-si/pen/DHoup-->
           <h4> 
-            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!","Use the menu in the top left to navigate."]'></a>
+            <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!"]'></a>
               <span class="wrap"></span>
             </a>
           </h4>
           <!--Typewriter end-->
           <br>
+          <!-- Resume header-->
+          <h2 class="projects-section-header" id="resume" style="color:#FD6585;">
+            My Resume
+          </h2>
+          <h6 class="projects-section-header " >
+            <a href="workFiles/Connor_Readnour_Resume_Port.pdf" target="_blank" style="color:#FD6585;">Click here for PDF</a>
+          </h6>
+          <br>
+          <div style="text-align: center;" class="myImg"> <!--- add class="zoom" to get 1.5x zoom effect-->
+            <img id="myResume" src="img/resume/resume.PNG" alt="Resume" style="width:90%; height:auto; max-width: 800px;" class="zoomResume">
+          </div>
+          <!--end of resume-->
           <!-- Certification Header-->
           <h2 class="projects-section-header " style="color:#FD6585; text-align: center;">
             Certified Responsive Web Design Developer
@@ -76,19 +88,7 @@
           <!-- certification picture-->
           <div style="text-align: center;" class="zoomResume"> <!--- add class="zoom" to get zoom effect-->
             <img src="img/responsiveWebDesignCert.jpg" id="cert" class="img-fluid img-thumbnail" alt="certification" style="width:100%; height:auto; max-width: 900px;">
-          </div>
-          <br>
-          <!-- Resume header-->
-          <h2 class="projects-section-header" id="resume" style="color:#FD6585;">
-            My Resume
-          </h2>
-          <h6 class="projects-section-header " >
-            <a href="workFiles/Connor_Readnour_Resume_Port.pdf" target="_blank" style="color:#FD6585;">Click here for PDF</a>
-          </h6>
-          <br>
-          <div style="text-align: center;" class="myImg"> <!--- add class="zoom" to get 1.5x zoom effect-->
-            <img id="myImg" src="img/resume/resume.PNG" alt="Resume" style="width:90%; height:auto; max-width: 800px;" class="zoomResume">
-          </div>
+          </div>          
           <br>  
         </section>
        <!--End of About section -->
@@ -102,50 +102,56 @@
                 <p class="project-title" style="color:#FD6585; display: block;">
                   {&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;}
                 </p>
-                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block;" src="img/teamSpaceScenario.PNG">
+                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/teamSpaceScenario.PNG">
                 <!--bootstrap example -->
                 <p class="project-title " style="color:#FD6585; display: block;">
                   {&nbsp;Upgrading old web page to Bootstrap&nbsp;}
                 </p>
-                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block;" src="img/teamSpaceUpgrade.png">
+                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/teamSpaceUpgrade.png">
                 <!--bootstrap example -->
                 <p class="project-title " style="color:#FD6585; display: block;">
                   {&nbsp;Upgrading this Portfolio&nbsp;}
                 </p>
-                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block;" src="img/portfolioUpgrade.PNG"> 
+                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/portfolioUpgrade.PNG"> 
               </div>
             <br />
             <br />
-			<!--End of Boostrap work -->
-			<!--Start of CAD/CAFM work -->
+          <!--End of Boostrap work -->
+          <!--Start of CAD/CAFM work -->
           <h2 class="projects-section-header" style="color:#FD6585;">
             Here is some of my CAD / IWMS / Other work
           </h2>
             <div class="projects-grid">
+              <!--cad/cafm/other example-->
               <p class="project-title " style="color:#FD6585; display: block;">
                 {&nbsp;AutoCAD Polylining example 1&nbsp;}
               </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines.PNG" >
+                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/plines.PNG" >
+              <!--cad/cafm/other example--> 
               <p class="project-title " style="color:#FD6585; display: block;">
                 {&nbsp;AutoCAD Polylining example 2&nbsp;}
               </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/plines2.PNG">
+                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/plines2.PNG">
+              <!--cad/cafm/other example-->
               <p class="project-title " style="color:#FD6585; display: block;" >
                 {&nbsp;Revit Basic Home Model 1&nbsp;}
               </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_sheet.PNG">
+                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/getting_started_sheet.PNG">
+              <!--cad/cafm/other example-->
               <p class="project-title " style="color:#FD6585; display: block;">
                 {&nbsp;Revit Basic Home Model 2&nbsp;}
               </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/getting_started_01.PNG">
+                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/getting_started_01.PNG">
+              <!--cad/cafm/other example-->
               <p class="project-title " style="color:#FD6585; display: block;">
                 {&nbsp;Excel Direct Connect Report&nbsp;}
               </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/exceldc.PNG">
+                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/exceldc.PNG">
+              <!--cad/cafm/other example-->
               <p class="project-title " style="color:#FD6585; display: block;">
-                {&nbsp;Monterrey Bay Aquarium Security Asset Project, from our Annual Company Presentation&nbsp;}
+                {&nbsp;Monterey Bay Aquarium Security Asset Project, slide from the RSC Annual Company Presentation&nbsp;}
               </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" src="img/aq.PNG">
+                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/aq.PNG">
 				  	</div>
 				<!-- End of CAD/CAFM work  -->
         <!--Start of Side Proejects -->
