--- a/backups/9_18_2020/index.html
+++ b/backups/9_18_2020/index.html
@@ -28,13 +28,13 @@
           <!--Nav Menu Links -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#welcome-section" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Home</a>
+              <a class="nav-link" href="#welcome-section" style="color:#f8f8ff; margin-left:12px; display: inline-block;">About Section</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#resume" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Resume</a>
+              <a class="nav-link" href="#projects" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Website Improvements</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Work Examples</a>
+              <a class="nav-link" href="#autocad" style="color:#f8f8ff; margin-left:12px; display: inline-block;">AutoCAD & Revit</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#side-projects" style="color:#f8f8ff; margin-left:12px; display: inline-block;">Side Projects</a>
@@ -50,10 +50,10 @@
       <!--/. end Navbar-->
       <!--Start of About section -->
         <section id="welcome-section">
-          <h1 style="color:#FD6585;">
+          <h1 style="color:#FD6585; padding-top: 50px;">
             Connor Readnour
           </h1>
-						<div style="text-align: center;" class="zoomImg"> <!--- add class="zoom" to get zoom effect-->
+						<div class="center"> <!--- add class="zoom" to get zoom effect-->
 							<img src="img/me.jpg" id="me" class="img-fluid img-thumbnail" alt="me!" style="width:100%; height:auto; max-width: 250px;">
             </div>
           <br>
@@ -61,111 +61,112 @@
           <h4> 
             <a href="" class="typewrite" style="color:#FD6585; text-decoration: none;" data-period="2000" data-type='[ "Front-End Web Development | IWMS | CAD | Data Analysis & Testing","Welcome to my Portfolio!"]'></a>
               <span class="wrap"></span>
-            </a>
           </h4>
           <!--Typewriter end-->
           <br>
           <!-- Resume header-->
-          <h2 class="projects-section-header" id="resume" style="color:#FD6585;">
-            My Resume
-          </h2>
-          <h6 class="projects-section-header " >
-            <a href="workFiles/Connor_Readnour_Resume_Port.pdf" target="_blank" style="color:#FD6585;">Click here for PDF</a>
-          </h6>
-          <br>
-          <div style="text-align: center;" class="myImg"> <!--- add class="zoom" to get 1.5x zoom effect-->
-            <img id="myResume" src="img/resume/resume.PNG" alt="Resume" style="width:90%; height:auto; max-width: 800px;" class="zoomResume">
+          <!--column left side -->
+          <div class="left-half center">
+            <h2 class="" style="color:#FD6585;">
+              My Resume
+            </h2>
+            <h6 class="" >
+              <a href="workFiles/Connor_Readnour_Resume_Port.pdf" target="_blank" style="color:#FD6585;">Click here for PDF</a>
+            </h6>
+            <br>
+            <div> <!--- add class="zoom" to get 1.5x zoom effect-->
+              <img src="img/resume/resume.PNG" class="img-fluid img-thumbnail" alt="Resume" style="height:auto; max-width: 800px;">
+            </div>
           </div>
           <!--end of resume-->
           <!-- Certification Header-->
-          <h2 class="projects-section-header " style="color:#FD6585; text-align: center;">
-            Certified Responsive Web Design Developer
-          </h2>
-          <h6 class="projects-section-header " >
-            <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" style="color:#FD6585;">Click here to verify certification</a>
-          </h6>
-          <br>
-          <!-- certification picture-->
-          <div style="text-align: center;" class="zoomResume"> <!--- add class="zoom" to get zoom effect-->
-            <img src="img/responsiveWebDesignCert.jpg" id="cert" class="img-fluid img-thumbnail" alt="certification" style="width:100%; height:auto; max-width: 900px;">
-          </div>          
+          <div class="right-half center">
+            <h2 style="color:#FD6585;">
+              Certified Responsive Web Design Developer
+            </h2>
+            <h6>
+              <a href="https://www.freecodecamp.org/certification/masterchief1021/responsive-web-design" target="_blank" style="color:#FD6585;">Click here to verify certification</a>
+            </h6>
+            <br>
+            <!-- certification picture-->
+            <div> <!--- add class="zoom" to get zoom effect-->
+              <img src="img/responsiveWebDesignCert.jpg" class="img-fluid img-thumbnail" alt="certification" style="height:auto; max-width: 900px;">
+            </div>  
+          </div>        
           <br>  
         </section>
        <!--End of About section -->
        <!--Start of Boostrap work -->
-        <section id="projects">
-          <h2 class="projects-section-header" style="color:#FD6585;">
-              Bootstrap examples
-          </h2>
-              <div class="projects-grid">
-                <!--bootstrap example -->
-                <p class="project-title" style="color:#FD6585; display: block;">
-                  {&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;}
-                </p>
-                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/teamSpaceScenario.PNG">
-                <!--bootstrap example -->
+        <section>
+            <div class="projects-grid center">
+              <h2 id="projects" class="center" style="color:#FD6585; display: inline-block; padding-top:200px;">
+                Below are examples of my professional website upgrades, made with the Bootstrap front-end framework.
+              </h2>
+              <!--bootstrap example -->
+              <p class="project-title" style="color:#FD6585; display: block;">
+                <!-- {&nbsp;Data Table, Side Nav Bar, Room Selector&nbsp;} -->
+              </p>
+                <img alt="project" class="project-image img-thumbnail" src="img/teamSpaceScenario.PNG">
+              <!--bootstrap example -->
+              <p class="project-title " style="color:#FD6585; display: block;">
+                <!-- {&nbsp;Upgrading old web page to Bootstrap&nbsp;} -->
+              </p>
+                <img alt="project" class="project-image img-thumbnail" src="img/teamSpaceUpgrade.png">
+              <!--bootstrap example -->
+              <p class="project-title " style="color:#FD6585; display: block;">
+                <!-- {&nbsp;Upgrading this Portfolio&nbsp;} -->
+              </p>
+                <img alt="project" class="project-image img-thumbnail" src="img/portfolioUpgrade.PNG"> 
+            </div>
+            <br />
+            <br />
+            <!--End of Boostrap work -->
+            <!--Start of CAD/CAFM work -->          
+              <div class="projects-grid center">
+                <h2 id="autocad" class="center" style="color:#FD6585; display: inline-block; padding-top:200px;">
+                  Here are a few examples of my AutoCAD Polylining, Revit Examples, and some other work I'm proud of.
+                </h2>
+                <!--cad/cafm/other example-->
                 <p class="project-title " style="color:#FD6585; display: block;">
-                  {&nbsp;Upgrading old web page to Bootstrap&nbsp;}
+                  <!-- {&nbsp;AutoCAD Polylining example 1&nbsp;} -->
                 </p>
-                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/teamSpaceUpgrade.png">
-                <!--bootstrap example -->
+                  <img alt="project" class="project-image img-thumbnail" src="img/plines.PNG" >
+                <!--cad/cafm/other example--> 
                 <p class="project-title " style="color:#FD6585; display: block;">
-                  {&nbsp;Upgrading this Portfolio&nbsp;}
+                  <!-- {&nbsp;AutoCAD Polylining example 2&nbsp;} -->
                 </p>
-                  <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/portfolioUpgrade.PNG"> 
+                  <img alt="project" class="project-image img-thumbnail" src="img/plines2.PNG">
+                <!--cad/cafm/other example-->
+                <p class="project-title " style="color:#FD6585; display: block;" >
+                  <!-- {&nbsp;Revit Basic Home Model 1&nbsp;} -->
+                </p>
+                  <img alt="project" class="project-image img-thumbnail" src="img/getting_started_sheet.PNG">
+                <!--cad/cafm/other example-->
+                <p class="project-title " style="color:#FD6585; display: block;">
+                  <!-- {&nbsp;Revit Basic Home Model 2&nbsp;} -->
+                </p>
+                  <img alt="project" class="project-image img-thumbnail" src="img/getting_started_01.PNG">
+                <!--cad/cafm/other example-->
+                <!-- <p class="project-title " style="color:#FD6585; display: block;">
+                  {&nbsp;Excel Direct Connect Report&nbsp;}
+                </p> -->
+                  <!-- <img alt="project" class="project-image img-thumbnail" src="img/exceldc.PNG"> -->
+                <!--cad/cafm/other example-->
+                <p class="project-title " style="color:#FD6585; display: block;">
+                  <!-- {&nbsp;Monterey Bay Aquarium Security Asset Project, slide from the RSC Annual Company Presentation&nbsp;} -->
+                </p>
+                  <img alt="project" class="project-image img-thumbnail" src="img/aq.PNG">
               </div>
-            <br />
-            <br />
-          <!--End of Boostrap work -->
-          <!--Start of CAD/CAFM work -->
-          <h2 class="projects-section-header" style="color:#FD6585;">
-            Here is some of my CAD / IWMS / Other work
-          </h2>
-            <div class="projects-grid">
-              <!--cad/cafm/other example-->
-              <p class="project-title " style="color:#FD6585; display: block;">
-                {&nbsp;AutoCAD Polylining example 1&nbsp;}
-              </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/plines.PNG" >
-              <!--cad/cafm/other example--> 
-              <p class="project-title " style="color:#FD6585; display: block;">
-                {&nbsp;AutoCAD Polylining example 2&nbsp;}
-              </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/plines2.PNG">
-              <!--cad/cafm/other example-->
-              <p class="project-title " style="color:#FD6585; display: block;" >
-                {&nbsp;Revit Basic Home Model 1&nbsp;}
-              </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/getting_started_sheet.PNG">
-              <!--cad/cafm/other example-->
-              <p class="project-title " style="color:#FD6585; display: block;">
-                {&nbsp;Revit Basic Home Model 2&nbsp;}
-              </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/getting_started_01.PNG">
-              <!--cad/cafm/other example-->
-              <p class="project-title " style="color:#FD6585; display: block;">
-                {&nbsp;Excel Direct Connect Report&nbsp;}
-              </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/exceldc.PNG">
-              <!--cad/cafm/other example-->
-              <p class="project-title " style="color:#FD6585; display: block;">
-                {&nbsp;Monterey Bay Aquarium Security Asset Project, slide from the RSC Annual Company Presentation&nbsp;}
-              </p>
-                <img alt="project" class="project-image img-thumbnail zoomImg" style="display: block; max-width: 1600px;" src="img/aq.PNG">
-				  	</div>
-				<!-- End of CAD/CAFM work  -->
-        <!--Start of Side Proejects -->
-					<div  id="side-projects">
+          </section>
+				  <!-- End of CAD/CAFM work  -->
+          <!--Start of Side Proejects -->
 					<br />
-          <br />
-					<br />
-          <br />
-      			<h2 class="projects-section-header" style="color:#FD6585;">
-              Side Projects
-            </h2>
-          </div>
+        <section id="side-projects">
           <!--side project buttons start-->
-            <div class="projects-grid">
+            <div class="center">
+              <h2 class="" style="color:#FD6585;">
+                Side Projects I've completed in my spare time.
+              </h2>
 							<a href="bootstrap_cheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;Bootstrap CheatSheet&nbsp;}</a>
 							<a href="htmlcheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
@@ -182,10 +183,10 @@
               <a href="mywebsite/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;Example Website&nbsp;}
               </a>
-							<a href="imageGallery/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="zoombtn" style="margin: 15px;">
+							<a href="imageGallery/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;CSS FlexBox Image Gallery&nbsp;}
               </a>
-              <a href="lessSandbox/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="zoombtn" style="margin: 15px;">
+              <a href="lessSandbox/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
                 {&nbsp;CSS LESS Project&nbsp;}
               </a>
               <a href="JavaScriptPractice/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin: 15px;">
